syntax = "proto3";

import "adlerhurst/cli/v1alpha/cli.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

package adlerhurst.example.v1;

option go_package = "github.com/cli-client/example/cli;cli";
option (adlerhurst.cli.v1alpha.cli).name = "example-cli";

//This is an example service
//The service does nothing
service ExampleService {
    option (adlerhurst.cli.v1alpha.command).name = "example";

    //I do absolutely nothing
    //because i'm a showcase
    rpc Call(CallRequest) returns (CallResponse) {
        option (adlerhurst.cli.v1alpha.sub_command).name = "myCall";
    };
    rpc Nested(NestedRequest) returns (NestedResponse);
    rpc ServerSideStream(ServerSideStreamRequest) returns (stream ServerSideStreamResponse);
    rpc ClientSideStream(stream ClientSideStreamRequest) returns (ClientSideStreamResponse);
    rpc BidirectionalStream(stream BidirectionalStreamRequest) returns (stream BidirectionalStreamResponse);
}

message NestedRequest {
    message Nested {
        string id = 1;
        int32 depth = 2;
    }

    Nested nested = 1;
    string id = 2;
}

message NestedResponse {}


// service Example2Service {
//     rpc Call(CallRequest) returns (CallResponse);
// }

message CallRequest {
    message Nested {
        string field = 1;
    }
    enum Wat {
        WAT_UNSPECIFIED = 0;
        WAT_WEISS = 1;
        WAT_ICH = 2;
    }
    string use_field_name = 1;
    string use_custom_name = 2 [(adlerhurst.cli.v1alpha.flag).name = "custom"];
    Nested nested = 3;
    repeated Nested rep_nest = 4;
    google.protobuf.Timestamp created_at = 5 [(adlerhurst.cli.v1alpha.flag).ignored = true];
    optional google.protobuf.Struct payload = 6 [(adlerhurst.cli.v1alpha.flag).ignored = true];
    Wat wat = 7;
    bool is_something = 8;
    optional int32 i32 = 9;
    uint32 ui32 = 10;
    int64 i64 = 11;
    uint64 ui64 = 12;
    float fl = 13;
    double dbl = 14;
    bytes beiz = 15;
    sint32 si32 = 16;
    sint64 si64 = 17;
    fixed32 f32 = 18;
    fixed64 f64 = 19;
    sfixed32 sf32 = 20;
    sfixed64 sf64 = 21;
    Some some = 22;
    repeated double rep_s = 23;
    repeated Wat rep_wat = 24;
    optional google.protobuf.Any something = 25;

    oneof oo {
        string oo_text = 26;
        Wat oo_wat = 27;
        Nested oo_nested = 28;
    }
}

enum Some {
    SOME_UNSPECIFIED = 0;
    SOME_SPECIFIED = 1;
}

message CallResponse {
    int64 number = 1;
}

message ServerSideStreamRequest {
    string text = 1;
}

message ServerSideStreamResponse {
    int64 number = 1;
}

message ClientSideStreamRequest {
    string text = 1;
}

message ClientSideStreamResponse {
    int64 number = 1;
}


message BidirectionalStreamRequest {
    string text = 1;
}

message BidirectionalStreamResponse {
    int64 number = 1;
}